testdata/zkc/invalid/fixed_array_02.zkc
//error:3:13-19:unknown constant a used as array size
fn main() {
  var items:[u8;a]
  return
}